tests/externInfo/dhrystone-exported/db/invalid/path/Func1.c.ttp
./db/invalid/path/Func1.c : 66.32-66.40 : -- value at line 68, column 15 --# #                                    CharPar1 ; unsigned char ; [65, 72] /\ != 0# 
./db/invalid/path/Func1.c : 66.56-66.64 : -- value at line 68, column 15 --# #                                    CharPar2 ; unsigned char ; [67, 82] /\ != 0# 
./db/invalid/path/Func1.c : 71.8-71.16 : -- value at line 71, column 8 --# # CharLoc1 ; unsigned char ; [0, 255]#  #-- value at line 72, column 8 --# #                                     CharLoc1 ; unsigned char ; [65, 72] /\ != 0# 
./db/invalid/path/Func1.c : 71.19-71.27 : -- value at line 71, column 8 --# #                                   CharPar1 ; unsigned char ; [65, 72] /\ != 0#  #-- value at line 72, column 8 --# #                                     CharPar1 ; unsigned char ; [65, 72] /\ != 0# 
./db/invalid/path/Func1.c : 72.8-72.16 : -- value at line 72, column 8 --# # CharLoc2 ; unsigned char ; [0, 255]#  #-- value at line 73, column 8 --# #                                     CharLoc2 ; unsigned char ; [65, 72] /\ != 0# 
./db/invalid/path/Func1.c : 72.19-72.27 : -- value at line 72, column 8 --# #                                   CharLoc1 ; unsigned char ; [65, 72] /\ != 0#  #-- value at line 73, column 8 --# #                                     CharLoc1 ; unsigned char ; [65, 72] /\ != 0# 
./db/invalid/path/Func1.c : 73.12-73.20 : -- value at line 73, column 8 --# #                                   CharLoc2 ; unsigned char ; [65, 72] /\ != 0#  #-- value at line 74, column 16 --# #                                      CharLoc2 ; unsigned char ; [65, 72] /\ != 0# 
./db/invalid/path/Func1.c : 73.24-73.32 : -- value at line 73, column 8 --# #                                   CharPar2 ; unsigned char ; [67, 82] /\ != 0#  #-- value at line 74, column 16 --# #                                      CharPar2 ; unsigned char ; [67, 82] /\ != 0# 
./db/invalid/path/Func1.c : 74.16-74.23 : -- value at line 74, column 16 --# #                                    counter ; signed int ; [380, 722] /\ != 0#  #-- value at line 75, column 16 --# #                                      counter ; signed int ; [471, 813] /\ != 0# 
